/*
 * $Id: ChangeLog,v 1.5600 2007/06/02 10:44:21 patrickmast Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-06-03 16:58 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/compiler/harbour.c
    ! Fixed a segfault (double free) when compiling debug info for codeblocks
      with detached locals.
  * source/compiler/hbdbginf.c
    * Fixed a comment.

2007-06-02 12:41 UTC+0100 Patrick Mast <patrick/dot/mast/at/xharbour.com>
  * Makfile.vc
    + Added thtml.prg

2007-06-01 16:34 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/tip/client.prg
    + Added data ::nWrite to work like ::nRead for upload stream
  * source/tip/ftpcln.prg
    + Added method ::UserCommand() that permit users sent custom commands

2007-05-31 16:22 UTC-0300 Ranier Vilela <ranier/at/cultura.com.br>
  * source/rdd/wafunc.c
    * Simplifies logic of hb_rddNewAreaNode to need one call to hb_xgrab
    * Add asserts to NULL pointer and uiSize

2007-05-31 18:40 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * source/vm/dynsym.c
    % Optimized, and added compatibility with some other functions as SELECT that needs
      ignore spaces after name in hb_dynsymGet( const char * szName )

2007-05-31 12:0 UTC-0300 Ranier Vilela <ranier/at/cultura.com.br>
  * source/vm/fm.c
    * Create constant HB_MEMFILER_FREED 0xee
    * Setting free memory with HB_MEMFILER_FREED to mark when memory was destroyed
    * Add asserts to NULL pointer, ulLen and blocks overlapped to hb_xmemcpy
    * Add asserts to NULL pointer and ulLen to hb_xmemset

2007-05-31 11:00 UTC-0300 Walter Negro <anegro at overnet.com.ar>
  * source/vm/fm.c
    ! Void variable unused warning, reported by Enrico Giordano

2007-05-31 10:03 UTC-0300 Walter Negro <anegro at overnet.com.ar>
  * source/vm/fm.c
    ! Add #undef hb_xautorelease()
