@@ -1,5 +1,5 @@
 #
-# $Id: Makefile,v 1.4 2007/02/27 15:59:37 druzus Exp $
+# $Id: Makefile,v 1.5 2007/05/27 14:07:27 likewolf Exp $
 #
 
 ROOT = ../../
@@ -16,7 +16,9 @@ LIBNAME=pp
 LIBS=\
 	common \
 
+HB_PPGEN_PATH ?= .
+
 include $(TOP)$(ROOT)config/lib.cf
 
 pptable.c : ppgen$(EXE_EXT)
-	$(HB_PPGEN_PATH)./ppgen$(EXE_EXT) $(TOP)$(ROOT)include/hbstdgen.ch -opptable.c -q
+	$(HB_PPGEN_PATH)/ppgen$(EXE_EXT) $(TOP)$(ROOT)include/hbstdgen.ch -opptable.c -q
