@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5600 2007/06/02 10:44:21 patrickmast Exp $
+ * $Id: ChangeLog,v 1.5601 2007/06/03 12:51:30 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-06-03 17:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * make_xmingw.sh
+  * source/pp/Makefile
+    * Cosmetic changes by Przemyslaw Czerpak to the cross-compiling system
+      (borrowed from Harbour).
 
 2007-06-03 16:58 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * source/compiler/harbour.c
